src/CSS/Home2.css
/* ... */
@media only screen and (max-width: 414px)and (max-height: 719px){
    #right{
        position: absolute;
        height: 50vh;
        width: 100%;
        background-color: #EDF778;
    }
    #white_text{
        position: relative;
        /* margin-top: 80%; */
        background-color: #EDF778;
     }
    #left{
        position: absolute;
        height: 50vh;
        width: 100%;
    }
    #blue_text{
        position: relative;
            margin-top: 0px;
            color: #EDF778;
    }
    .switch {
        margin-top: 0vh;
        margin-left: 0vw;
    }
    img{
        width: 90%;
        height: 90%;
    }
    .contact-icons{
        margin-top: 10px;
      }
    .filler {
        position: absolute;
        color: #EDF778;
        font-family: 'Vidaloka', serif;
        top: 30%;
        width: 50%;
        font-weight: bolder;
        display: inline-grid;
        grid-template-columns: 25px 25px 30vh 25px 25px;
        }
    .filler>p{
        font-size: 36px;
        }
    .icon {
        font-size: 90px;
        }
        h1{
        font-size: 27px;
        line-height: 25px;
        }
    .about p{
        font-size: 14px;
        }
    }
        .skills{
            margin-left: -7%;
        }
@media only screen and (max-width: 411px) and (max-height: 823px){
    #right{
        position: absolute;
        min-height: 50vh;
        width: 100%;
        background-color: #EDF778;
    }
    #white_text{
        position: relative;
        margin-top: 100%;
        background-color: #EDF778;
     }
    #left{
        position: absolute;
        height: 50vh;
        width: 100%;
    }
    #blue_text{
        position: relative;
            margin-top: 0px;
            color: #EDF778;
    }
    .switch {
        margin-top: 0vh;
        margin-left: 0vw;
    }
    .filler {
        position: absolute;
        color: #EDF778;
        font-family: 'Vidaloka', serif;
        top: 30%;
        width: 50%;
        font-weight: bolder;
        display: inline-grid;
        grid-template-columns: 25px 25px 30vh 25px 25px;
        }
    .filler>p{
        font-size: 36px;
        }
    .icon {
        font-size: 90px;
        }
        h1{
        font-size: 29px;
        line-height: 30px;
        }
    .about p{
        font-size: 16px;
        }
}

@media only screen and (max-width: 411px) and (max-height: 731px){
    #right{
        position: absolute;
        min-height: 50vh;
        width: 100%;
        background-color: #EDF778;
    }
    #white_text{
        position: relative;
        margin-top: 81%;
        background-color: #EDF778;
     }
    #left{
        position: absolute;
        height: 50vh;
        width: 100%;
    }
    #blue_text{
        position: relative;
            margin-top: 0px;
            color: #EDF778;
    }
    .switch {
        margin-top: 0vh;
        margin-left: 0vw;
    }
    
}

@media only screen and (max-width: 375px){
    #right{
        position: absolute;
        min-height: 50vh;
        width: 100%;
        background-color: #EDF778;
        overflow: auto;
    }
    #white_text{
        position: relative;
        margin-top: 100%;
        background-color: #EDF778;
        
     }
    #left{
        position: absolute;
        height: 50vh;
        width: 100%;
    }
    #blue_text{
        position: relative;
            margin-top: 0px;
            color: #EDF778;
    }
    .switch {
        margin-top: 0vh;
        margin-left: 0vw;
    }
    
}
@media only screen and (max-width: 375px) and (max-height: 667px){
    #right{
        position: absolute;
        min-height: 50vh;
        width: 100%;
        background-color: #EDF778;
        overflow: auto;
    }
    #white_text{
        position: relative;
        margin-top: 68%;
        background-color: #EDF778;
        
     }
    #left{
        position: absolute;
        height: 50vh;
        width: 100%;
    }
    #blue_text{
        position: relative;
            margin-top: 0px;
            color: #EDF778;
    }
    .switch {
        margin-top: 0vh;
        margin-left: 0vw;
    }
    
}
@media only screen and (max-width: 360px){
    #right{
        position: absolute;
        min-height: 50vh;
        width: 100%;
        background-color: #EDF778;
        overflow: auto;
    }
    #white_text{
        position: relative;
        margin-top: 67%;
        background-color: #EDF778;
        
     }
    #left{
        position: absolute;
        height: 50vh;
        width: 100%;
    }
    #blue_text{
        position: relative;
            margin-top: 0px;
            color: #EDF778;
    }
    .switch {
        margin-top: 0vh;
        margin-left: 0vw;
    }
    
}

